--- a/exercício 4.html
+++ b/exercício 4.html
@@ -29,7 +29,7 @@
     
     <script>
         let array = []
-        let texto
+        let texto = 0
       let res = document.getElementById('texto')
       for(let c = 1; c<=3; c++) {
         texto = Number(window.prompt('Digite um número'))
