--- a/exercício 2.html
+++ b/exercício 2.html
@@ -32,7 +32,7 @@
         let positivo = 0;
         let texto;
         let res = document.getElementById('texto')
-        
+        // incremento
         for(let c = 1; c<=3; c++) {
             texto = Number(window.prompt('digite um número'))
             if (texto<0) {
