--- a/exercício 7.html
+++ b/exercício 7.html
@@ -36,7 +36,7 @@
         let res = document.getElementById('texto')
         
         for (let c = 1; c<=3; c++) {
-        texto = Number(window.prompt('digite um numero'))
+       let  texto = Number(window.prompt('digite um numero'))
         soma+=texto        
         }    
         res.value = `A soma total é ${soma}`
