--- a/exercício 5.html
+++ b/exercício 5.html
@@ -51,7 +51,7 @@
             res2.value = `O número que você digitou foi ${arrayr}`
        }
        else {
-            res2.value = `Não existe esse número no banco de dados`
+            res2.value = `Não existe esse número no array`
        }
        
        
