--- a/exercício 13.html
+++ b/exercício 13.html
@@ -35,7 +35,7 @@
     <script>
             function conversor() {
             let res = document.getElementById('texto');
-            let fahrenheit = Number(window.prompt('digite o valor graus'));
+            let fahrenheit = Number(window.prompt('digite o valor fahrenheit'));
             let grauscelsius = (fahrenheit - 32)/1.8;
              // método não continua na variável?
             res.value = `O valor em fahrenheit foi dado em ${fahrenheit}. E o valor convertido em grauscelsius foi ${grauscelsius.toFixed()}`;            
