--- a/exercício 14.html
+++ b/exercício 14.html
@@ -33,6 +33,7 @@
 
     
     <script>
+            // elevado a exponenciação acaba ficando Nan
             let exp = []
             function exponenciação() {            
                 
