--- a/exercício 24.html
+++ b/exercício 24.html
@@ -60,7 +60,7 @@
    
 
 
-        
+        // condição não funciona
         if (texto1.value > texto2.value && texto3.value) {
             
             maior.value = `O maior número é ${texto1.value}`
