--- a/exercício 30.html
+++ b/exercício 30.html
@@ -18,11 +18,11 @@
         }
         
         input {
-            width:700px;
+            width:1400px;
             text-align:center;
             display:flex;
-            height:25px;
-            
+            height:40px;
+            font-size:25px;
         }
 
     </style>
